--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,11 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Data Analysis in the Search for Dark Matter with a Network of Precision Measurement Tools"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+permalink: /talks/2018-07-26-talk-1
+venue: "University of California, Los Angeles"
+date: 2018-07-26
+location: "Los Angeles, California"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+Talk at the National McNair Conference at UCLA on using the Global Positioning System (GPS) to search for dark matter.
