--- a/_talks/2018-10-14-talk-3.md
+++ b/_talks/2018-10-14-talk-3.md
@@ -1,5 +1,5 @@
 ---
-title: "Detecting Exoplanets with the Great Basin Observatory,"
+title: "Detecting Exoplanets with the Great Basin Observatory"
 collection: talks
 type: "Talk"
 permalink: /talks/2018-10-14-talk-3
