--- a/_talks/2019-05-06-poster-4.md
+++ b/_talks/2019-05-06-poster-4.md
@@ -1,5 +1,5 @@
 ---
-title: "Applying the matched-filter technique to search for dark matter with networks of precision measurement devices,"
+title: "Applying the matched-filter technique to search for dark matter with networks of precision measurement devices"
 collection: talks
 type: "Poster"
 permalink: /talks/2019-05-06-poster-4
