--- a/_talks/2019-04-12-poster-3.md
+++ b/_talks/2019-04-12-poster-3.md
@@ -1,5 +1,5 @@
 ---
-title: "Applying the matched-filter technique to search for dark matter with networks of precision measurement devices,"
+title: "Applying the matched-filter technique to search for dark matter with networks of precision measurement devices"
 collection: talks
 type: "Poster"
 permalink: /talks/2019-04-12-poster-3
