--- a/_posts/2019-06-14-blog-1.md
+++ b/_posts/2019-06-14-blog-1.md
@@ -1,7 +1,7 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: 'First Blog Post Coming Soon'
+date: 2019-06-14
+permalink: /posts/2019-06-14-blog-1
 tags:
   - cool posts
   - category1
