--- a/_talks/2019-07-22-talk-5.md
+++ b/_talks/2019-07-22-talk-5.md
@@ -1,4 +1,5 @@
-title: "“(Upcoming) The Ontological Status of the Wavefunction"
+---
+title: "(Upcoming) The Ontological Status of the Wavefunction"
 collection: talks
 type: "Talk"
 permalink: /talks/2019-07-22-talk-5
