--- a/_posts/2019-07-03-GPSDM.md
+++ b/_posts/2019-07-03-GPSDM.md
@@ -2,18 +2,11 @@
 title: 'The GPS.DM Collaboration'
 date: 2019-07-03
 permalink: /posts/2019/07/GPSDM/
-excerpt: "<br/><img src='/images/gpsdm.jpg' width='400' height='400'> The GPS.DM Collaboration is searching for dark matter using GPS atomic clock data."
+excerpt: "<br/><img src='/images/gpsdm.jpg' width='100' height='100'> The GPS.DM Collaboration is searching for dark matter using GPS atomic clock data."
 tags:
   - dark matter
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+<br/><img src='/images/gpsdm.jpg' width='400' height='400'> 
 
-Headings are cool
-======
-
-You can have many headings
-======
-
-Aren't headings cool?
-------
+The GPS.DM collaborations is using atomic clocks aboard GPS satellites to search for dark matter in our galaxy. 
