el fin (pues, espero)

--- a/_posts/2019-07-03-GPSDM.md
+++ b/_posts/2019-07-03-GPSDM.md
@@ -4,7 +4,7 @@ date: 2019-07-03
 permalink: /posts/2019/07/GPSDM/
 excerpt: "<br/><img src='/images/gpsdm.jpg' width='140' height='140'> The GPS.DM Collaboration is searching for dark matter using GPS atomic clock data."
 tags:
-  - dark matter
+  - Dark Matter
 ---
 
 <p align="center">
