--- a/_talks/2019-07-22-talk-5.md
+++ b/_talks/2019-07-22-talk-5.md
@@ -1,5 +1,5 @@
 ---
-title: "(Upcoming) The Ontological Status of the Wavefunction"
+title: "The Ontological Status of the Wavefunction"
 collection: talks
 type: "Talk"
 permalink: /talks/2019-07-22-talk-5
@@ -8,4 +8,4 @@ date: 2019-07-22
 location: "Reno, NV"
 ---
 
-Upcoming department talk about wavefunction realism, approaches to realism in physics, and pedagogy of quantum mechanics.
+Department talk about wavefunction realism, approaches to realism in physics, and pedagogy of quantum mechanics.
