hopefully this works

--- a/_talks/2019-11-01-talk-6.md
+++ b/_talks/2019-11-01-talk-6.md
@@ -2,11 +2,11 @@
 title: "Applying the matched-filter technique to the search for dark matter
 transients with networks of quantum sensors"
 collection: talks
-type: "Poster"
+type: "Talk"
 permalink: /talks/2019-11-01-talk-6
 venue: "Stanford University"
 date: 2019-11-01
-location: "Reno, NV"
+location: "Stanford, CA"
 ---
 
-Oral presentation at the APS Meeting of the Far West Section at Stanford University.
+Oral presentation at the APS Meeting of the Far West Section at Stanford University. Presented on the development of a frequentists event detection technique for dark matter searches using precision measurement devices.
