--- a/_posts/2019-07-03-GPSDM.md
+++ b/_posts/2019-07-03-GPSDM.md
@@ -2,15 +2,16 @@
 title: 'The GPS.DM Collaboration'
 date: 2019-07-03
 permalink: /posts/2019/07/GPSDM/
-excerpt: "<br/><img src='/images/gpsdm.jpg' width='140' height='140'> The GPS.DM Collaboration is searching for dark matter using GPS atomic clock data."
+excerpt: "<br/><img src='/images/gpsdm.jpg' width='140' height='140' align='right'> The GPS.DM Collaboration is searching for dark matter using GPS atomic clock data."
 tags:
   - Dark Matter
 ---
-
+<div align="justify">
 <p align="center">
-  <img width="560" height="365" src="/images/gpsdm-1.jpg">
+  <img width="560" height="365" src="/images/gpsdm-1.jpg" align="left">
 </p>
 
-The GPS.DM collaborations is performing a novel dark matter detection experiment using atomic clocks aboard GPS satellites to search for dark matter in our galaxy. The idea, first published [here](https://www.nature.com/articles/nphys3137), suggests that so-called "clumpy" dark matter objects would leave a correlated propagation of glitches in the GPS atomic clock data stream during an interaction event. With nearly two decades of archival data available from the Jet Propulsion Laboratory, all that is left to do is search for dark matter signatures! 
+The GPS.DM collaborations is performing a novel dark matter detection experiment using atomic clocks aboard GPS satellites to search for dark matter in our galaxy. The idea, first published <a href="https://www.nature.com/articles/nphys3137">here</a>, suggests that so-called "clumpy" dark matter objects would leave a correlated propagation of glitches in the GPS atomic clock data stream during an interaction event. With nearly two decades of archival data available from the Jet Propulsion Laboratory, all that is left to do is search for dark matter signatures! 
 
-An initial search for dark matter interaction signatures can be found [here](https://www.nature.com/articles/s41467-017-01440-4), while the development of more sophisticated Bayesian and frequentist statistical techniques can found [here (Bayesian)](https://journals.aps.org/prd/abstract/10.1103/PhysRevD.97.083009) and [here (frequentist)](https://arxiv.org/abs/1908.03320). Check out the [GPS.DM Collaboration](http://www.dereviankogroup.com/gps-dark-matter/) for updates!
+An initial search for dark matter interaction signatures can be found <a href="https://www.nature.com/articles/s41467-017-01440-4">here</a>, while the development of more sophisticated Bayesian and frequentist statistical techniques can found <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.97.083009">here</a> and <a href="https://arxiv.org/abs/1908.03320">here</a>, respectively. Check out the <a href="http://www.dereviankogroup.com/gps-dark-matter/">GPS.DM Collaboration</a> for updates!
+</div>
