--- a/_posts/2019-07-03-GPSDM.md
+++ b/_posts/2019-07-03-GPSDM.md
@@ -8,7 +8,7 @@ tags:
 ---
 <div align="justify">
 <p align="center">
-  <img width="392" height="255" src="/images/gpsdm-1.jpg" align="right" hspace="25">
+  <img width="392" height="255" src="/images/gpsdm-1.jpg" align="right">
 </p>
 
 The GPS.DM collaborations is performing a novel dark matter detection experiment using atomic clocks aboard GPS satellites to search for dark matter in our galaxy. The idea, first published <a href="https://www.nature.com/articles/nphys3137">here</a>, suggests that so-called "clumpy" dark matter objects would leave a correlated propagation of glitches in the GPS atomic clock data stream during an interaction event. With nearly two decades of archival data available from the Jet Propulsion Laboratory, all that is left to do is search for dark matter signatures! 
